# 2025-promega-mini-test

./:  split_data.txt  .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  CLAUDE.md  Data_Description.md  Dockerfile  HARRIET_REPLICATION_STATUS.md  Makefile  Meta_classifier_new_split.ipynb  README.md  REPLICATION_STATUS.md  SPLIT_DATA_README.md  STATUS.md  Summary_Table.csv  TEMPORAL_TRANSFORMER_SETUP.md  VERIFICATION_REPORT.md  all_paths_catalog.csv  all_paths_catalog_prior.csv  analyze_metabolite_restrictions.py  class_env.yaml  config.py  core_env.yaml  custom_losses.py  dependency_cycles_prior.txt  email_organoid_inclusion_criteria.docx  extract_misclassified_efficientnet.py  generate_all_summary_tables.py  generate_efficientnet_summary.py  generate_organoid_day_strips.py  generate_presentation.py  image_classifier_presentation.pptx  maketable.py  metabolite_models.py  mmcv_env.yml  mmseg_environment.yml  mmseg_test.py  model.Makefile  (+29 more)
.beads/: issues.jsonl  metadata.json
2025-promega-mini-test/: .gitignore  .mailmap  Makefile  generate_all_summary_tables.py  restore_misclassified_images.py  split_data_reproducible.py  submit_cnn_lstm_amanda.slurm  submit_cnn_lstm_single_phase.slurm
analysis/: data_loader.py  descriptive_stats.py  generate_splits.py  metabolite_boxplot.py  three_model_plot.py
combined_classifier/: README.md  run_multimodal.s  submit_combined.slurm  train_combined_lgbm.py  train_metabolites_cpu.py  train_multimodal.py
combined_model/: stitched_preprocessing.py  submit_combined.slurm  train_combined_lgbm.py
data/: README.md  (+4 more)
(+2893 files in other folders)
