[project]
name = "promega-organoid-classifier"
version = "1.0.0"
description = "Organoid quality classification (image, metabolite, combined)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "numpy>=1.24",
    "scikit-learn>=1.2",
    "pandas>=2.0",
    "scipy>=1.10",
    "pillow>=9.5",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "tqdm>=4.65",
    "scikit-image>=0.20",
    "opencv-python>=4.7",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "lightgbm>=4.0",
]

[project.optional-dependencies]
mmseg = ["mmsegmentation", "mmengine", "mmcv"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
